feat: improving responsive 1 section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header
-      class="absolute top-0 left-0 w-full h-[77px] md:h-[8.8rem] flex border border-solid border-white/[020%] bg-brand-blue"
+      class="absolute top-0 left-0 w-full h-[77px] md:h-[8.8rem] flex border border-solid border-white/[020%]"
     >
       <div class="container flex flex-row items-center justify-between">
         <a class="max-w-[108px] md:max-w-full" href="">
@@ -79,18 +79,22 @@
       </div>
     </header>
 
-    <!--  <section
-      class="bg-hero w-full h-[786px] bg-no-repeat bg-center bg-cover pt-[175px]"
+    <section
+      class="bg-hero w-full md:h-[150vh] lg:h-[786px] bg-no-repeat bg-center bg-cover pt-[175px]"
     >
-      <div class="container flex items-start justify-between">
-        <div class="w-full max-w-[684px]">
+      <div
+        class="container flex flex-col lg:flex-row items-center lg:items-start justify-between"
+      >
+        <div
+          class="w-full max-lg:max-w-full lg:max-w-[684px] max-lg:flex max-lg: flex-col max-lg:items-center"
+        >
           <h3
-            class="font-Poppins text-white font-semibold opacity-80 text-4xl leading-[150%] -tracking-[0.5px] mb-8"
+            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-4xl leading-[150%] -tracking-[0.5px] mb-8"
           >
             Abra sua conta, é só baixar o app!
           </h3>
           <h1
-            class="font-Poppins text-white -tracking-[1px] leading-[112%] font-semibold text-[6.4rem] mb-10"
+            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold max-lg:text-[5.6rem] lg:text-[6.4rem] mb-10"
           >
             A conta digital certa para cuidar bem do seu dinheiro
           </h1>
@@ -137,25 +141,29 @@
             </li>
           </ul>
         </div>
-        <div class="w-full max-w-[706px] -mr-[174px]">
+        <div
+          class="w-full max-w-[706px] md:-mr-[0px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-24 lg:mt-0"
+        >
           <h2
-            class="font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-[4rem] text-center mb-16"
+            class="font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-[4rem] text-center lg:mb-16"
           >
             Banco 100% digital
           </h2>
-          <div class="w-full h-[540px] relative top-24">
+          <div
+            class="w-full max-lg:mx-auto max-lg:w-[511px] lg:h-[540px] relative md:top-16 lg:top-24"
+          >
             <img
-              class="absolute top-10 left-0 z-20"
+              class="absolute lg:top-10 md:top-32 lg:left-0 z-20 md:max-w-[300px] lg:max-w-[350px] xl:max-w-[435px]"
               src="./src/assets/img/card-neon-frnt.png"
               alt=""
             />
             <img
-              class="absolute bottom-[46px] right-[86px] z-10"
+              class="absolute md:top-[110px] lg:bottom-[150px] xl:bottom-[46px] md:right-0 lg:right-[30px] z-10 md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
               src="./src/assets/img/card-neon-back.png"
               alt=""
             />
             <img
-              class="absolute top-7 right-11"
+              class="absolute top-7 right-11 md:max-w-[429px] lg:max-w-[42.9rem] xl:max-w-[553px]"
               src="./src/assets/img/circle-cards-neon.svg"
               alt=""
             />
@@ -163,7 +171,7 @@
         </div>
       </div>
     </section>
-
+    <!--  
     <section class="pt-32">
       <div class="container flex flex-row items-start justify-between">
         <div class="w-full max-w-[277px]">
