fix: hero mobile responsive

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </header>
 
     <section
-      class="bg-hero w-full md:h-[150vh] lg:h-[786px] bg-no-repeat bg-center bg-cover pt-[175px]"
+      class="bg-hero w-full h-[786px] bg-no-repeat bg-center bg-cover pt-[124px] md:pt-[175px]"
     >
       <div
         class="container flex flex-col lg:flex-row items-center lg:items-start justify-between"
@@ -89,55 +89,52 @@
           class="w-full max-lg:max-w-full lg:max-w-[684px] max-lg:flex max-lg: flex-col max-lg:items-center"
         >
           <h3
-            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-4xl leading-[150%] -tracking-[0.5px] mb-8"
+            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-base md:text-4xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-8"
           >
             Abra sua conta, é só baixar o app!
           </h3>
           <h1
-            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold max-lg:text-[5.6rem] lg:text-[6.4rem] mb-10"
+            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold text-[32px] md:text-[5.6rem] lg:text-[6.4rem] mb-9 md:mb-10 w-[321px]"
           >
             A conta digital certa para cuidar bem do seu dinheiro
           </h1>
           <button
-            class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+            class="flex justify-center items-center leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 md:px-[2.6rem] rounded-[66px] md:rounded-[122px] font-Poppins font-semibold text-base md:text-2xl text-[#855B35] h-[48px] w-[237px]"
           >
             Abra sua conta digital
           </button>
           <ul
-            class="mt-16 flex items-center w-full max-w-[620px] justify-between"
+            class="mt-9 md:mt-16 flex flex-col md:items-center w-full justify-start items-start max-w-[300px] md:max-w-[620px] md:justify-between gap-4"
           >
             <li class="flex items-center">
               <div
-                class="w-[4.8rem] h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-anuidade.svg" alt="" />
               </div>
-              <span class="text-white text-xl leading-5 opacity-90"
-                >Cartão sem <br />
-                anuidade</span
+              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+                >Cartão sem <span class="md:block">anuidade</span></span
               >
             </li>
             <li class="flex items-center">
               <div
-                class="w-[4.8rem] h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-conta-digital.svg" alt="" />
               </div>
-              <span class="text-white text-xl leading-5 opacity-90"
-                >Conta digital <br />
-                100% grátis</span
+              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+                >Conta digital 100% grátis</span
               >
             </li>
             <li class="flex items-center">
               <div
-                class="w-[4.8rem] h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-dinheiro.svg" alt="" />
               </div>
-              <span class="text-white text-xl leading-5 opacity-90"
-                >Seu dinheiro <br />
-                rendendo mais</span
-              >
+              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+                >Seu dinheiro <span class="md:block">rendendo mais</span>
+              </span>
             </li>
           </ul>
         </div>
@@ -145,25 +142,25 @@
           class="w-full max-w-[706px] md:-mr-[0px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-24 lg:mt-0"
         >
           <h2
-            class="font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-[4rem] text-center lg:mb-16"
+            class="hidden md:block font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-[4rem] text-center lg:mb-16"
           >
             Banco 100% digital
           </h2>
           <div
-            class="w-full max-lg:mx-auto max-lg:w-[511px] lg:h-[540px] relative md:top-16 lg:top-24"
+            class="w-full flex justify-center mx-auto lg:w-[511px] lg:h-[540px] relative mt-[51px] md:top-16 lg:top-24"
           >
             <img
-              class="absolute lg:top-10 md:top-32 lg:left-0 z-20 md:max-w-[300px] lg:max-w-[350px] xl:max-w-[435px]"
+              class="absolute top-[29px] lg:top-10 md:top-32 left-0 z-20 max-w-[211px] md:max-w-[300px] lg:max-w-[350px] xl:max-w-[435px]"
               src="./src/assets/img/card-neon-frnt.png"
               alt=""
             />
             <img
-              class="absolute md:top-[110px] lg:bottom-[150px] xl:bottom-[46px] md:right-0 lg:right-[30px] z-10 md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
+              class="absolute md:top-[110px] -bottom-[246px] right-[35px] lg:bottom-[150px] xl:bottom-[46px] md:right-0 lg:right-[30px] z-10 max-w-[170px] md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
               src="./src/assets/img/card-neon-back.png"
               alt=""
             />
             <img
-              class="absolute top-7 right-11 md:max-w-[429px] lg:max-w-[42.9rem] xl:max-w-[553px]"
+              class="absolute md:top-7 md:right-11 w-[271px] md:w-[429px] lg:w-[42.9rem] xl:w-[553px]"
               src="./src/assets/img/circle-cards-neon.svg"
               alt=""
             />
