fix: responsive hero tablet

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </head>
   <body>
     <header
-      class="absolute top-0 left-0 w-full h-[77px] md:h-[8.8rem] flex border border-solid border-white/[020%]"
+      class="absolute top-0 left-0 w-full h-[77px] md:h-[88px] lg:h-[8.8rem] flex justify-center border border-solid border-white/[020%]"
     >
-      <div class="container flex flex-row items-center justify-between">
+      <div class="container px-5 flex flex-row items-center justify-between">
         <a class="max-w-[108px] md:max-w-full" href="">
           <img src="./src/assets/img/logo.svg" alt="" />
         </a>
@@ -68,7 +68,7 @@
             </li>
           </ul>
           <button
-            class="leading-[4.8rem] bg-transparent hover:bg-white border-[1px] border-solid border-white transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-white hover:text-brand-green-light hidden md:inline-block"
+            class="py-2 px-3 w-[217px] h-10 bg-transparent hover:bg-white border-[1px] border-solid border-white transition-all duration-300 rounded-[122px] font-Poppins font-semibold text-base md:text-lg text-white hover:text-brand-green-light hidden md:inline-block"
           >
             Abra sua conta digital
           </button>
@@ -80,87 +80,87 @@
     </header>
 
     <section
-      class="bg-hero w-full h-[786px] bg-no-repeat bg-center bg-cover pt-[124px] md:pt-[175px]"
+      class="bg-hero w-full h-[786px] md:h-[891px] flex flex-col items-center bg-no-repeat bg-center bg-cover pt-[124px] md:pt-[150px]"
     >
       <div
-        class="container flex flex-col lg:flex-row items-center lg:items-start justify-between"
+        class="container px-5 flex flex-col lg:flex-row items-center lg:items-start justify-between"
       >
         <div
           class="w-full max-lg:max-w-full lg:max-w-[684px] max-lg:flex max-lg: flex-col max-lg:items-center"
         >
           <h3
-            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-base md:text-4xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-8"
+            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-base md:text-lg lg:text-4xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-6"
           >
             Abra sua conta, é só baixar o app!
           </h3>
           <h1
-            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold text-[32px] md:text-[5.6rem] lg:text-[6.4rem] mb-9 md:mb-10 w-[321px]"
+            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold text-[32px] md:text-5xl lg:text-[6.4rem] mb-9 md:mb-[26px] max-w-[321px] md:max-w-[685px]"
           >
             A conta digital certa para cuidar bem do seu dinheiro
           </h1>
           <button
-            class="flex justify-center items-center leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 md:px-[2.6rem] rounded-[66px] md:rounded-[122px] font-Poppins font-semibold text-base md:text-2xl text-[#855B35] h-[48px] w-[237px]"
+            class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base lg:text-2xl text-[#855B35] max-h-[48px] max-w-[237px]"
           >
             Abra sua conta digital
           </button>
           <ul
-            class="mt-9 md:mt-16 flex flex-col md:items-center w-full justify-start items-start max-w-[300px] md:max-w-[620px] md:justify-between gap-4"
+            class="mt-9 md:mt-10 flex flex-col md:flex-row md:items-center w-full justify-start items-start max-w-[300px] md:max-w-[620px] md:justify-between gap-4"
           >
-            <li class="flex items-center">
+            <li class="flex items-center w-full">
               <div
-                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[44px] md:h-[44px] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-anuidade.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+              <span class="text-white text-lg md:text-base leading-5 opacity-90"
                 >Cartão sem <span class="md:block">anuidade</span></span
               >
             </li>
-            <li class="flex items-center">
+            <li class="flex items-center w-full">
               <div
-                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[44px] md:h-[44px] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-conta-digital.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+              <span class="text-white text-lg md:text-base leading-5 opacity-90"
                 >Conta digital 100% grátis</span
               >
             </li>
-            <li class="flex items-center">
+            <li class="flex items-center w-full">
               <div
-                class="w-[2.4rem] h-[2.4rem] md:w-[4.8rem] md:h-[4.8rem] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
+                class="w-[2.4rem] h-[2.4rem] md:w-[44px] md:h-[44px] rounded-full flex items-center justify-center bg-gradient-to-b from-f-gradient-blue/40 to-t-gradient-blue mr-3"
               >
                 <img src="./src/assets/img/icon-dinheiro.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-xl leading-5 opacity-90"
+              <span class="text-white text-lg md:text-base leading-5 opacity-90"
                 >Seu dinheiro <span class="md:block">rendendo mais</span>
               </span>
             </li>
           </ul>
         </div>
         <div
-          class="w-full max-w-[706px] md:-mr-[0px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-24 lg:mt-0"
+          class="w-full max-w-[706px] md:-mr-[0px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-[50px] lg:mt-0"
         >
           <h2
-            class="hidden md:block font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-[4rem] text-center lg:mb-16"
+            class="hidden md:block text-[40px] font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-center lg:mb-16"
           >
             Banco 100% digital
           </h2>
           <div
-            class="w-full flex justify-center mx-auto lg:w-[511px] lg:h-[540px] relative mt-[51px] md:top-16 lg:top-24"
+            class="w-full flex justify-center max-w-[317px] md:max-w-[511px] mx-auto lg:w-[511px] lg:h-[540px] relative mt-[51px] md:mt-5 lg:top-24"
           >
             <img
-              class="absolute top-[29px] lg:top-10 md:top-32 left-0 z-20 max-w-[211px] md:max-w-[300px] lg:max-w-[350px] xl:max-w-[435px]"
+              class="absolute top-[29px] md:top-[35px] lg:top-10 left-0 md:-left-[67px] z-20 max-w-[211px] md:max-w-[340px] lg:max-w-[350px] xl:max-w-[435px]"
               src="./src/assets/img/card-neon-frnt.png"
               alt=""
             />
             <img
-              class="absolute md:top-[110px] -bottom-[246px] right-[35px] lg:bottom-[150px] xl:bottom-[46px] md:right-0 lg:right-[30px] z-10 max-w-[170px] md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
+              class="absolute -bottom-[246px] md:top-[144px] right-[35px] md:right-[64px] lg:bottom-[150px] xl:bottom-[46px] lg:right-[30px] z-10 max-w-[170px] md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
               src="./src/assets/img/card-neon-back.png"
               alt=""
             />
             <img
-              class="absolute md:top-7 md:right-11 w-[271px] md:w-[429px] lg:w-[42.9rem] xl:w-[553px]"
+              class="absolute md:top-7 max-w-[271px] md:max-w-[429px] lg:w-[42.9rem] xl:w-[553px]"
               src="./src/assets/img/circle-cards-neon.svg"
               alt=""
             />
@@ -168,9 +168,9 @@
         </div>
       </div>
     </section>
-    <!--  
+
     <section class="pt-32">
-      <div class="container flex flex-row items-start justify-between">
+      <div class="container px-5 flex flex-row items-start justify-between">
         <div class="w-full max-w-[277px]">
           <div class="w-full max-w-[277px] relative mb-44">
             <img
@@ -328,8 +328,9 @@
         </div>
       </div>
     </section>
+    <!-- 
     <section class="pt-32">
-      <div class="container">
+      <div class="container px-5">
         <div class="mb-10 flex items-end justify-between relative w-full">
           <h2
             class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-3 w-full"
@@ -453,7 +454,7 @@
     </section>
 
     <section class="pt-[127px] pb-[85px]">
-      <div class="container flex items-center">
+      <div class="container px-5 flex items-center">
         <div class="max-w-[542px]">
           <h2
             class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-[61px] w-full"
@@ -547,7 +548,7 @@
       </div>
     </section>
     <footer class="bg-brand-blue pt-12">
-      <div class="container">
+      <div class="container px-5">
         <div
           class="flex justify-between pb-12 mb-14 border-solid border-2 border-[#49C5FD]/20 border-r-0 border-t-0 border-l-0"
         >
