--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
   </head>
   <body>
     <header
-      class="absolute top-0 left-0 w-full h-[77px] md:h-[88px] lg:h-[8.8rem] flex justify-center border border-solid border-white/[020%]"
+      class="absolute top-0 left-0 w-full h-[77px] md:h-[88px] flex justify-center border border-solid border-white/[020%]"
     >
-      <div class="container px-5 flex flex-row items-center justify-between">
+      <div
+        class="container px-5 flex flex-row items-center justify-between xl:justify-around"
+      >
         <a class="max-w-[108px] md:max-w-full" href="">
           <img src="./src/assets/img/logo.svg" alt="" />
         </a>
         <nav class="flex items-center">
-          <ul class="items-center gap-12 mr-[60px] hidden lg:flex">
+          <ul class="items-center xl:gap-12 xl:mr-[60px] hidden xl:flex">
             <li>
               <a
-                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                class="font-poppins font-medium text-base text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
                 href=""
-                >Produtos</a
+                >Produtos Neon</a
               >
             </li>
 
             <li>
               <a
-                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                class="font-poppins font-medium text-base text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
                 href=""
                 >Conta digital PJ</a
               >
@@ -44,7 +46,7 @@
 
             <li>
               <a
-                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                class="font-poppins font-medium text-base text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
                 href=""
               >
                 Quem somos
@@ -53,7 +55,7 @@
 
             <li>
               <a
-                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                class="font-poppins font-medium text-base text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
                 href=""
                 >Blog</a
               >
@@ -61,18 +63,18 @@
 
             <li>
               <a
-                class="font-poppins font-medium text-[1.6rem] text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
+                class="font-poppins font-medium text-base text-white hover:text-brand-yellow transition-colors duration-300 leading-[125%]"
                 href=""
                 >Ajuda</a
               >
             </li>
           </ul>
           <button
-            class="py-2 px-3 w-[217px] h-10 bg-transparent hover:bg-white border-[1px] border-solid border-white transition-all duration-300 rounded-[122px] font-Poppins font-semibold text-base md:text-lg text-white hover:text-brand-green-light hidden md:inline-block"
+            class="px-3 xl:px-[18px] w-[217px] h-10 bg-transparent hover:bg-white border-[1px] border-solid border-white transition-all duration-300 rounded-[122px] font-Poppins font-semibold text-base text-white hover:text-brand-green-light hidden md:inline-block"
           >
             Abra sua conta digital
           </button>
-          <button class="block lg:hidden ml-10">
+          <button class="block xl:hidden ml-10">
             <img src="/src/assets/img/btn-mobile.svg" alt="" />
           </button>
         </nav>
@@ -80,31 +82,31 @@
     </header>
 
     <section
-      class="bg-hero w-full h-[786px] md:h-[891px] flex flex-col items-center bg-no-repeat bg-center bg-cover pt-[124px] md:pt-[150px]"
+      class="bg-hero w-full h-[786px] md:h-[891px] xl:h-[786px] flex flex-col items-center bg-no-repeat bg-center bg-cover pt-[124px] md:pt-[150px] xl:pt-[175px]"
     >
       <div
-        class="container px-5 flex flex-col lg:flex-row items-center lg:items-start justify-between"
+        class="container px-5 flex flex-col xl:flex-row items-center xl:items-start justify-between xl:justify-center"
       >
         <div
-          class="w-full max-lg:max-w-full lg:max-w-[684px] max-lg:flex max-lg: flex-col max-lg:items-center"
+          class="w-full max-xl:max-w-full xl:max-w-[684px] max-xl:flex max-xl: flex-col max-xl:items-center"
         >
           <h3
-            class="font-Poppins max-lg:text-center text-white font-semibold opacity-80 text-base md:text-lg lg:text-4xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-6"
+            class="font-Poppins text-center xl:text-start text-white font-semibold opacity-80 text-base md:text-lg xl:text-2xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-6 xl:mb-8"
           >
             Abra sua conta, é só baixar o app!
           </h3>
           <h1
-            class="font-Poppins max-lg:text-center text-white -tracking-[1px] leading-[112%] font-semibold text-[32px] md:text-5xl lg:text-[6.4rem] mb-9 md:mb-[26px] max-w-[321px] md:max-w-[685px]"
+            class="font-Poppins max-xl:text-center text-white -tracking-[1px] leading-[112%] font-semibold text-[32px] md:text-5xl xl:text-[64px] mb-9 md:mb-[26px] xl:mb-[39px] max-w-[321px] md:max-w-[685px]"
           >
             A conta digital certa para cuidar bem do seu dinheiro
           </h1>
           <button
-            class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base lg:text-2xl text-[#855B35] max-h-[48px] max-w-[237px]"
+            class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px]"
           >
             Abra sua conta digital
           </button>
           <ul
-            class="mt-9 md:mt-10 flex flex-col md:flex-row md:items-center w-full justify-start items-start max-w-[300px] md:max-w-[620px] md:justify-between gap-4"
+            class="mt-9 md:mt-10 xl:mt-16 flex flex-col md:flex-row md:items-center w-full justify-start items-start max-w-[300px] md:max-w-[620px] md:justify-between gap-4"
           >
             <li class="flex items-center w-full">
               <div
@@ -112,7 +114,8 @@
               >
                 <img src="./src/assets/img/icon-anuidade.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-base leading-5 opacity-90"
+              <span
+                class="text-white text-lg md:text-base xl:text-lg leading-5 opacity-90"
                 >Cartão sem <span class="md:block">anuidade</span></span
               >
             </li>
@@ -122,7 +125,8 @@
               >
                 <img src="./src/assets/img/icon-conta-digital.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-base leading-5 opacity-90"
+              <span
+                class="text-white text-lg md:text-base xl:text-lg leading-5 opacity-90"
                 >Conta digital 100% grátis</span
               >
             </li>
@@ -132,35 +136,36 @@
               >
                 <img src="./src/assets/img/icon-dinheiro.svg" alt="" />
               </div>
-              <span class="text-white text-lg md:text-base leading-5 opacity-90"
+              <span
+                class="text-white text-lg md:text-base xl:text-lg leading-5 opacity-90"
                 >Seu dinheiro <span class="md:block">rendendo mais</span>
               </span>
             </li>
           </ul>
         </div>
         <div
-          class="w-full max-w-[706px] md:-mr-[0px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-[50px] lg:mt-0"
+          class="w-full md:-mr-[0px] xl:max-w-[706px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-[50px] xl:mt-0"
         >
           <h2
-            class="hidden md:block text-[40px] font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-center lg:mb-16"
+            class="hidden md:block text-[40px] xl:text-[56px] font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-center xl:mb-16"
           >
             Banco 100% digital
           </h2>
           <div
-            class="w-full flex justify-center max-w-[317px] md:max-w-[511px] mx-auto lg:w-[511px] lg:h-[540px] relative mt-[51px] md:mt-5 lg:top-24"
+            class="w-full flex justify-center max-w-[317px] md:max-w-[511px] xl:w-full mx-auto relative mt-[51px] md:mt-5 xl:top-24"
           >
             <img
-              class="absolute top-[29px] md:top-[35px] lg:top-10 left-0 md:-left-[67px] z-20 max-w-[211px] md:max-w-[340px] lg:max-w-[350px] xl:max-w-[435px]"
+              class="absolute top-[29px] md:top-[35px] 2xl:top-[30px] left-0 md:-left-[67px] 2xl:-left-[140px] z-20 max-w-[211px] md:max-w-[340px] 2xl:max-w-[438px]"
               src="./src/assets/img/card-neon-frnt.png"
               alt=""
             />
             <img
-              class="absolute -bottom-[246px] md:top-[144px] right-[35px] md:right-[64px] lg:bottom-[150px] xl:bottom-[46px] lg:right-[30px] z-10 max-w-[170px] md:max-w-[274px] lg:max-w-[290px] xl:max-w-[352px]"
+              class="absolute -bottom-[246px] md:top-[144px] 2xl:top-[165px] right-[35px] md:right-[64px] 2xl:right-[20px] 2xl:bottom-[46px] z-10 max-w-[170px] md:max-w-[274px] 2xl:max-w-[391px]"
               src="./src/assets/img/card-neon-back.png"
               alt=""
             />
             <img
-              class="absolute md:top-7 max-w-[271px] md:max-w-[429px] lg:w-[42.9rem] xl:w-[553px]"
+              class="absolute md:top-7 max-md:max-w-[271px] max-2xl:max-w-[429px] 2xl:w-[553px]"
               src="./src/assets/img/circle-cards-neon.svg"
               alt=""
             />
@@ -169,7 +174,7 @@
       </div>
     </section>
 
-    <section class="pt-32">
+    <!--     <section class="pt-32">
       <div class="container px-5 flex flex-row items-start justify-between">
         <div class="w-full max-w-[277px]">
           <div class="w-full max-w-[277px] relative mb-44">
@@ -327,7 +332,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- 
     <section class="pt-32">
       <div class="container px-5">
