--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             Banco 100% digital
           </h2>
           <div
-            class="w-full flex justify-center max-w-[317px] md:max-w-[511px] xl:w-full mx-auto relative mt-[51px] md:mt-5 xl:top-24"
+            class="w-full flex justify-center max-w-[317px] md:max-w-[511px] xl:w-full mx-auto relative mt-[51px] md:mt-5 xl:top-6"
           >
             <img
               class="absolute top-[29px] md:top-[35px] 2xl:top-[30px] left-0 md:-left-[67px] 2xl:-left-[140px] z-20 max-w-[211px] md:max-w-[340px] 2xl:max-w-[438px]"
@@ -174,12 +174,14 @@
       </div>
     </section>
 
-    <!--     <section class="pt-32">
-      <div class="container px-5 flex flex-row items-start justify-between">
-        <div class="w-full max-w-[277px]">
-          <div class="w-full max-w-[277px] relative mb-44">
+    <section class="pt-[86px] xl:pt-32">
+      <div
+        class="container px-5 flex flex-col-reverse inver items-start justify-between"
+      >
+        <div class="w-full flex flex-col-reverse items-center xl:max-w-[277px]">
+          <div class="w-full max-w-[218px] relative pt-10 mb-44">
             <img
-              class="absolute -z-10 -left-[214px] top-[88px] max-w-[377px]"
+              class="absolute hidden md:block -z-10 -left-[214px] top-[88px] max-w-[377px]"
               src="./src/assets/img/circle-mockup.svg"
               alt=""
             />
@@ -189,26 +191,26 @@
               alt=""
             />
           </div>
-          <div class="w-full flex flex-col items-center">
+          <div class="w-full flex flex-col items-center pt-[117px]">
             <div
-              class="before:content-point before:absolute before:w-1 before:h-20 before:-top-[104px] before:left-[50%] before:-ml-1 relative"
+              class="xl:before:content-point xl:before:absolute xl:before:w-1 xl:before:h-20 xl:before:-top-[104px] xl:before:left-[50%] xl:before:-ml-1 relative"
             >
               <img src="./src/assets/img/icon-neon.svg" alt="" />
             </div>
             <div class="flex flex-col items-center">
               <h3
-                class="font-Poppins text-brand-grey-6 font-semibold text-4xl leading-[150%] -tracking-[0.5px] mt-9"
+                class="font-Poppins text-brand-grey-6 font-semibold text-2xl xl:text-4xl leading-[150%] -tracking-[0.5px] mt-[14px] xl:mt-9"
               >
                 Baixe nosso app
               </h3>
               <p
-                class="text-2xl text-brand-grey-4 opacity-70 mb-6 leading-[150%] text-center"
+                class="text-lg xl:text-2xl text-brand-grey-4 opacity-70 mb-11 xl:mb-6 leading-[150%] text-center max-w-[270px]"
               >
                 Que tal abrir uma conta digital para ver como a gente faz a sua
                 vida muito mais simples?
               </p>
               <ul>
-                <li class="mb-6">
+                <li class="mb-4 xl:mb-6">
                   <a href="" target="_blank">
                     <img src="./src/assets/img/apple-store.svg" alt="" />
                   </a>
@@ -223,25 +225,27 @@
           </div>
         </div>
         <div class="w-full max-w-[800px]">
-          <div class="mb-[174px]">
+          <div class="mb-[34px] flex flex-col items-center">
             <h2
-              class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[4rem] max-w-[488px] mb-12"
+              class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-semibold text-[28px] text-center max-w-[317px] xl:max-w-[488px] mb-[37px] xl:mb-12"
             >
               Resolva sua vida direto pelo app Neon!
             </h2>
-            <ul class="mb-9">
+            <ul class="mb-10 xl:mb-9">
               <li
-                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full pb-8 px-0"
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full pb-[10px] xl:pb-8"
               >
-                <div class="flex items-center justify-center">
+                <div class="flex items-start xl:items-center xl:justify-center">
                   <img src="./src/assets/img/icon-cartao-credito.svg" alt="" />
-                  <div class="ml-11">
+                  <div class="ml-6 xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px] max-w-[191px]"
                     >
                       Cartão de crédito sem anuidade
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-3xl">
+                    <p
+                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[227px]"
+                    >
                       Conta digital com cartão de crédito sem anuidade e sem
                       complicação
                     </p>
@@ -250,17 +254,19 @@
                 <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
               <li
-                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-8 px-0"
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-7"
               >
                 <div class="flex items-center">
                   <img src="./src/assets/img/icon-taxas.svg" alt="" />
-                  <div class="ml-11">
+                  <div class="ml-6 xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px]"
                     >
                       Sem taxas
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-3xl">
+                    <p
+                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[188px]"
+                    >
                       Transferências, boletos de depósito e outros serviços
                       gratuitos
                     </p>
@@ -269,17 +275,19 @@
                 <img src="./src/assets/img/arrow-right.svg" alt="" />
               </li>
               <li
-                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-8 px-0"
+                class="flex items-center justify-between border-t-0 border-r-0 border-l-0 border-solid border-b border-[#e1e0e7]/90 w-full py-[37px]"
               >
                 <div class="flex items-center">
                   <img src="./src/assets/img/icon-investimentos.svg" alt="" />
-                  <div class="ml-11">
+                  <div class="ml-6 xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-4xl leading-[150%] -tracking-[0.5px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px]"
                     >
                       Mais investimentos
                     </h3>
-                    <p class="leading-[150%] text-[#7A7786] text-3xl">
+                    <p
+                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[208px]"
+                    >
                       Rendem mais que a poupança e você resgata quando quiser
                     </p>
                   </div>
@@ -288,51 +296,53 @@
               </li>
             </ul>
             <a
-              class="inline-block font-poppins font-medium text-3xl leading-[112%] -tracking-[0.5px] text-brand-blue"
+              class="font-poppins font-medium text-lg leading-[112%] -tracking-[0.5px] text-brand-blue"
               href=""
               >Conheça outros produtos</a
             >
           </div>
           <div
-            class="w-full h-[410px] bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-center rounded-xl flex items-center justify-between pl-[59px]"
+            class="h-[470px] w-max-[336px] xl:h-[410px] bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-bottom xl:bg-center bg-cover rounded-xl flex flex-col items-center xl:justify-between xl:pl-[59px]"
           >
-            <div class="w-full max-w-[380px]">
+            <div class="w-full max-w-[380px] flex flex-col items-center">
               <h2
-                class="font-Poppins text-white -tracking-[1px] leading-[112%] font-bold text-[4rem] mb-3"
+                class="font-Poppins text-white -tracking-[1px] leading-[112%] font-bold text-[28px] text-center pt-[43px] mb-3"
               >
                 Neon Pejota
               </h2>
               <h3
-                class="font-Poppins text-white font-medium text-4xl leading-[150%] -tracking-[0.5px] max-w-[300px] mb-2"
+                class="font-Poppins text-white font-semibold text-xl xl:text-4xl leading-[150%] -tracking-[0.5px] max-w-[281px] xl:max-w-[300px] mb-2 text-center"
               >
                 Contas digitais PJ gratuitas para decolar seu negócio!
               </h3>
-              <p class="leading-[150%] text-white text-2xl mb-8">
+              <p
+                class="leading-[150%] text-white text-base text-center xl:text-2xl mb-8 max-w-[253px]"
+              >
                 As melhores contas para fazer pagamentos, compras e receber dos
                 seus clientes.
               </p>
               <div class="flex gap-4 items-center">
                 <button
-                  class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+                  class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px]"
                 >
                   SOU MEI
                 </button>
                 <button
-                  class="inline-block leading-[4.8rem] bg-brand-yellow hover:bg-[#FFDC5C] transition-all duration-300 px-[2.6rem] rounded-[122px] font-Poppins font-semibold text-2xl text-[#855B35]"
+                  class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px] z-10"
                 >
-                  SOU ME
+                  SOU PJ
                 </button>
               </div>
             </div>
             <img
-              class="-mr-[31px]"
+              class="mt-[34px] max-w-[277px] xl:-mr-[31px] relative"
               src="/src/assets/img/card-front-pj.svg"
               alt=""
             />
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <!-- 
     <section class="pt-32">
       <div class="container px-5">
