fix: card responsive tablet

--- a/index.html
+++ b/index.html
@@ -174,14 +174,18 @@
       </div>
     </section>
 
-    <section class="pt-[86px] xl:pt-32">
+    <section class="pt-[86px] md:pt-[153px] xl:pt-32">
       <div
-        class="container px-5 flex flex-col-reverse inver items-start justify-between"
+        class="container mx-auto px-5 flex flex-col-reverse inver items-start justify-between"
       >
-        <div class="w-full flex flex-col-reverse items-center xl:max-w-[277px]">
-          <div class="w-full max-w-[218px] relative pt-10 mb-44">
+        <div
+          class="w-full md:mx-auto flex flex-col-reverse md:flex-row items-center justify-center md:pt-[93px] md:max-w-[606px] xl:max-w-[277px]"
+        >
+          <div
+            class="w-full max-w-[218px] md:max-w-[255px] md:h-[541px] relative pt-10 mb-44 md:pt-0 md:mb-0"
+          >
             <img
-              class="absolute hidden md:block -z-10 -left-[214px] top-[88px] max-w-[377px]"
+              class="absolute hidden -z-10 -left-[214px] top-[88px] max-w-[377px]"
               src="./src/assets/img/circle-mockup.svg"
               alt=""
             />
@@ -191,7 +195,7 @@
               alt=""
             />
           </div>
-          <div class="w-full flex flex-col items-center pt-[117px]">
+          <div class="w-full flex flex-col items-center pt-[117px] md:pt-0">
             <div
               class="xl:before:content-point xl:before:absolute xl:before:w-1 xl:before:h-20 xl:before:-top-[104px] xl:before:left-[50%] xl:before:-ml-1 relative"
             >
@@ -199,7 +203,7 @@
             </div>
             <div class="flex flex-col items-center">
               <h3
-                class="font-Poppins text-brand-grey-6 font-semibold text-2xl xl:text-4xl leading-[150%] -tracking-[0.5px] mt-[14px] xl:mt-9"
+                class="font-Poppins text-brand-grey-6 font-semibold text-2xl xl:text-4xl leading-[150%] -tracking-[0.5px] mt-[14px] md:mt-[31px] xl:mt-9"
               >
                 Baixe nosso app
               </h3>
@@ -225,9 +229,9 @@
           </div>
         </div>
         <div class="w-full max-w-[800px]">
-          <div class="mb-[34px] flex flex-col items-center">
+          <div class="mb-[34px] md:mb-[57px] flex flex-col items-center">
             <h2
-              class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-semibold text-[28px] text-center max-w-[317px] xl:max-w-[488px] mb-[37px] xl:mb-12"
+              class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-semibold text-[28px] md:text-4xl text-center max-w-[317px] md:max-w-[424px] xl:max-w-[488px] mb-[37px] md:mb-[53px] xl:mb-12"
             >
               Resolva sua vida direto pelo app Neon!
             </h2>
@@ -237,14 +241,14 @@
               >
                 <div class="flex items-start xl:items-center xl:justify-center">
                   <img src="./src/assets/img/icon-cartao-credito.svg" alt="" />
-                  <div class="ml-6 xl:ml-11">
+                  <div class="ml-6 md:ml-[30px] xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px] max-w-[191px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl md:text-2xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px] max-w-[191px] md:max-w-[382px]"
                     >
                       Cartão de crédito sem anuidade
                     </h3>
                     <p
-                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[227px]"
+                      class="leading-[150%] text-[#7A7786] text-sm md:text-lg xl:text-3xl max-w-[227px] md:max-w-[550px]"
                     >
                       Conta digital com cartão de crédito sem anuidade e sem
                       complicação
@@ -258,14 +262,14 @@
               >
                 <div class="flex items-center">
                   <img src="./src/assets/img/icon-taxas.svg" alt="" />
-                  <div class="ml-6 xl:ml-11">
+                  <div class="ml-6 md:ml-[30px] xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl md:text-2xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px] max-w-[191px] md:max-w-[382px]"
                     >
                       Sem taxas
                     </h3>
                     <p
-                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[188px]"
+                      class="leading-[150%] text-[#7A7786] text-sm md:text-lg xl:text-3xl max-w-[227px] md:max-w-[494px]"
                     >
                       Transferências, boletos de depósito e outros serviços
                       gratuitos
@@ -279,14 +283,14 @@
               >
                 <div class="flex items-center">
                   <img src="./src/assets/img/icon-investimentos.svg" alt="" />
-                  <div class="ml-6 xl:ml-11">
+                  <div class="ml-6 md:ml-[30px] xl:ml-11">
                     <h3
-                      class="font-Poppins text-brand-grey-4 font-semibold text-xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px]"
+                      class="font-Poppins text-brand-grey-4 font-semibold text-xl md:text-2xl xl:text-4xl xl:leading-[150%] -tracking-[0.5px] max-w-[191px] md:max-w-[382px]"
                     >
                       Mais investimentos
                     </h3>
                     <p
-                      class="leading-[150%] text-[#7A7786] text-sm xl:text-3xl max-w-[208px]"
+                      class="leading-[150%] text-[#7A7786] text-sm md:text-lg xl:text-3xl max-w-[227px] md:max-w-[479px]"
                     >
                       Rendem mais que a poupança e você resgata quando quiser
                     </p>
@@ -302,40 +306,42 @@
             >
           </div>
           <div
-            class="h-[470px] w-max-[336px] xl:h-[410px] bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-bottom xl:bg-center bg-cover rounded-xl flex flex-col items-center xl:justify-between xl:pl-[59px]"
+            class="h-[470px] md:h-[352px] w-[336px] md:w-[688px] mx-auto xl:h-[410px] bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-bottom md:bg-center bg-cover rounded-xl flex flex-col md:flex-row items-center xl:justify-between md:pl-[50px] xl:pl-[59px] relative"
           >
-            <div class="w-full max-w-[380px] flex flex-col items-center">
+            <div
+              class="w-full max-w-[380px] md:max-w-[326px] flex flex-col items-center"
+            >
               <h2
-                class="font-Poppins text-white -tracking-[1px] leading-[112%] font-bold text-[28px] text-center pt-[43px] mb-3"
+                class="font-Poppins text-white -tracking-[1px] leading-[112%] font-bold text-[28px] md:text-[32px] text-center md:text-start pt-[43px] md:pt-0 mb-3 md:w-full"
               >
                 Neon Pejota
               </h2>
               <h3
-                class="font-Poppins text-white font-semibold text-xl xl:text-4xl leading-[150%] -tracking-[0.5px] max-w-[281px] xl:max-w-[300px] mb-2 text-center"
+                class="font-Poppins text-white font-semibold text-xl md:text-2xl xl:text-4xl leading-[150%] -tracking-[0.5px] max-w-[281px] md:max-w-[326px] xl:max-w-[300px] mb-2 text-center md:text-start"
               >
                 Contas digitais PJ gratuitas para decolar seu negócio!
               </h3>
               <p
-                class="leading-[150%] text-white text-base text-center xl:text-2xl mb-8 max-w-[253px]"
+                class="leading-[150%] text-white text-base text-center md:text-start xl:text-2xl mb-8 md:mb-0 max-w-[253px] md:max-w-[311px]"
               >
                 As melhores contas para fazer pagamentos, compras e receber dos
                 seus clientes.
               </p>
-              <div class="flex gap-4 items-center">
+              <div class="flex gap-4 items-center md:items-start md:w-full">
                 <button
                   class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px]"
                 >
                   SOU MEI
                 </button>
                 <button
-                  class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px] z-10"
+                  class="flex justify-center items-center bg-brand-yellow py-4 px-7 hover:bg-[#FFDC5C] transition-all duration-300 rounded-[66px] font-Poppins font-semibold text-base text-[#855B35] max-h-[48px] max-w-[237px] z-10 md:z-0"
                 >
                   SOU PJ
                 </button>
               </div>
             </div>
             <img
-              class="mt-[34px] max-w-[277px] xl:-mr-[31px] relative"
+              class="md:absolute mt-[34px] md:mt-0 max-w-[277px] md:max-w-[293px] md:-right-[26px] xl:-mr-[31px]"
               src="/src/assets/img/card-front-pj.svg"
               alt=""
             />
